Some changes, IDK

--- a/test.html
+++ b/test.html
@@ -6,7 +6,13 @@
 <script type="text/javascript" src="background.js"></script>
 </head>
 <body>
-<canvas id="canvas">
+Internal canvas:<br />
+<canvas id="canvas" style="border: thick solid red">
+</canvas>
+<br />
+<br />
+Icon preview:<br />
+<canvas id="icon" style="border: thick solid green">
 </canvas>
 </body>
 </html>
